--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <button type="submit">Go</button>
           </form>
         </body>
+        <script src="index.js"></script>
+
       </html>
     `);
     res.end();
